<resources>
    <string name="app_name">GymLog_Yaka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtView">GYM LOG</string>
    <string name="txtView3Value">Calculate your BMI</string>
    <string name="edtWeightHintValue">Enter your weight (Kg)</string>
    <string name="btnCalBMIValue">Result</string>
    <string name="edtHeightHintValue">Enter your height (m)</string>
    <string name="AddNew">Add New Schedule</string>
    <string name="addScheduleTxt">Add Schedule</string>
    <string name="edtScheduleNameHint">Enter schedule name</string>
    <string name="btnAddScheduleTxt">Save</string>
</resources>